added body text placeholder

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<link rel="stylesheet" href="https://use.typekit.net/kge1ahz.css"> 
 </head>
 <body>
-	
+	<h1>home page goes here eventually</h1>
 </body>
 </html>
