--- a/index.html
+++ b/index.html
@@ -3,10 +3,75 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Articket</title>
-	<link rel="stylesheet" href="https://use.typekit.net/kge1ahz.css"> 
+	<title>ArticketBCN: Barcelona Museum Pass | Unofficial Website</title>
+	<link rel="stylesheet" href="https://use.typekit.net/kge1ahz.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+		<div class="header">
+			<img 
+				class="logo"
+				src="img/logo.svg" 
+				alt="logo">
+			<div class="main_nav">
+				<ul class="nav-bar__menu">
+					<li><a class="nav nav-menu" href="#!">Museums</a></li>
+					<li><a class="nav nav-menu" href="#!">how it works</a></li>
+					<li><a class="nav nav-menu" href="#!">routes</a></li>
+					<li><a class="nav nav-menu" href="#!">contact</a></li>
+				</ul>
+
+				<div class="nav__dropdown">
+					<a class="lang--active" href="#!">en</a>
+					<img 
+						class="dropbtn" 
+						src="components/img/dropbtn@2x.png"
+						srcset="components/img/dropbtn@2x.png 2x"
+						alt="">
+					<div class="nav-bar__language">
+						<a class="lang" href="#!">ca</a>
+						<a class="lang" href="#!">es</a>
+						<a class="lang" href="#!">fr</a>
+						<a class="lang" href="#!">it</a>
+						<a class="lang" href="#!">de</a>
+					</div>
+				</div>
+				<div class="purchasebutton">
+					<a class="purchasebutton purchasebutton--nav" href="#!">Buy your articket</a>
+				</div>
+			</div>
+		</div>
+
+		<section class="main">
+			<div class="main--right">
+				<h1 class="main__heading">the best art museums in barcelona in one pass</h1>
+				<ul class="featured_icons">
+							<li class="icon__card">
+								<div class="i"><img src="img/icon-clock.svg" alt=""></div>
+								<div class="t"><p class="t">Skip</p>
+								<p class="t">the line</p>
+								</div>
+							</li>
+							<li class="icon__card">
+								<div class="i"><img src="img/icon-ticket.svg" alt=""></div>
+								<div class="t"><p class="t">1 ticket</p>
+								<p class="t">6 museums</p>
+								</div>
+							</li>
+							<li class="icon__card">
+								<div class="i"><img src="img/icon-percent.svg" alt=""></div>
+								<div class="t"><p class="t">save up</p>
+								<p class="t">to 45%</p>
+								</div>
+							</li>
+							<li class="icon__card">
+								<div class="i"><img src="img/icon-heart.svg" alt=""></div>
+								<div class="t"><p class="t">keep a</p>
+								<p class="t">memory</p>
+								</div>
+							</li>
+						</ul>
+
 	<h1>home page goes here eventually</h1>
 </body>
 </html>
