added featured section

--- a/index.html
+++ b/index.html
@@ -42,36 +42,52 @@
 			</div>
 		</div>
 
-		<section class="main">
-			<div class="main--right">
-				<h1 class="main__heading">the best art museums in barcelona in one pass</h1>
+		<section class="featured">
+			<div class="featured--right">
+				<h1 class="featured__heading">the best art museums in barcelona in one pass</h1>
 				<ul class="featured_icons">
-							<li class="icon__card">
-								<div class="i"><img src="img/icon-clock.svg" alt=""></div>
-								<div class="t"><p class="t">Skip</p>
-								<p class="t">the line</p>
-								</div>
-							</li>
-							<li class="icon__card">
-								<div class="i"><img src="img/icon-ticket.svg" alt=""></div>
-								<div class="t"><p class="t">1 ticket</p>
-								<p class="t">6 museums</p>
-								</div>
-							</li>
-							<li class="icon__card">
-								<div class="i"><img src="img/icon-percent.svg" alt=""></div>
-								<div class="t"><p class="t">save up</p>
-								<p class="t">to 45%</p>
-								</div>
-							</li>
-							<li class="icon__card">
-								<div class="i"><img src="img/icon-heart.svg" alt=""></div>
-								<div class="t"><p class="t">keep a</p>
-								<p class="t">memory</p>
-								</div>
-							</li>
-						</ul>
-
-	<h1>home page goes here eventually</h1>
+					<li class="icon__card">
+						<div class="i"><img src="img/icon-clock.svg" alt=""></div>
+						<div class="t"><p class="t">Skip</p>
+						<p class="t">the line</p>
+						</div>
+					</li>
+					<li class="icon__card">
+						<div class="i"><img src="img/icon-ticket.svg" alt=""></div>
+						<div class="t"><p class="t">1 ticket</p>
+						<p class="t">6 museums</p>
+						</div>
+					</li>
+					<li class="icon__card">
+						<div class="i"><img src="img/icon-percent.svg" alt=""></div>
+						<div class="t"><p class="t">save up</p>
+						<p class="t">to 45%</p>
+						</div>
+					</li>
+					<li class="icon__card">
+						<div class="i"><img src="img/icon-heart.svg" alt=""></div>
+						<div class="t"><p class="t">keep a</p>
+						<p class="t">memory</p>
+						</div>
+					</li>
+				</ul>
+				<div class="featured-3">
+					<a class="purchasebutton" href="#!">Buy your articket</a>
+					<div class="featured-3a">
+						<p class="t">Real</p>
+						<p class="t2">65€</p>
+					</div>
+					<img src="components/img/arrow-right.svg" alt="">
+					<div class="featured-3b">
+						<p class="t">articket</p>
+						<p class="t2">35€</p>
+					</div>
+				</div>
+			</div>
+			<img 
+				class="featured--passport"
+				srcset="img/articket-passport.png 2x" 
+				src="img/articket-passport.png" 
+				alt="hand holding articket passport">
 </body>
 </html>
