added flex grid to museums

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
 		<section class="museums">
 			<h2 class="section__header">Museums Included</h2>
-			<div section="museums__grid">
-				<article class="museum__card">
+			<div class="museum__grid">
+				<div class="museum__card">
 					<img 
 							class="museum__img"
 							srcset="img/museu-cccb.jpg 2x"
@@ -104,8 +104,8 @@
 							alt="CCCB">
 					<h3 class="museum__name">CCCB</h3>
 					<p class="museum__summary">CCCB is a space that aims to bring culture to the neighbourhood by staging inclusive exhibitions and activities that focus on the city and contemporary culture, such as film, music, performing arts and experimental art.</p>
-				</article>
-				<article class="museum__card">
+				</div>
+				<div class="museum__card">
 					<img 
 							class="museum__img"
 							srcset="img/museu-miro.jpg 2x"
@@ -113,8 +113,8 @@
 							alt="fundacio joan miro">
 					<h3 class="museum__name">FUNDACIÓ JOAN MIRÓ</h3>
 					<p class="museum__summary">The Fundació Joan Miró is a space that showcases the artist’s work alongside other contemporary pieces that help to maintain Joan Miró’s unique artistic legacy alive.</p>
-				</article>
-				<article class="museum__card">
+				</div>
+				<div class="museum__card">
 					<img 
 							class="museum__img"
 							srcset="img/museu-picasso.jpg 2x"
@@ -122,8 +122,8 @@
 							alt="museu picasso">
 					<h3 class="museum__name">Museu Picasso</h3>
 					<p class="museum__summary">Immerse yourself in Pablo Picasso’s formative years with this comprehensive collection that clearly reflects his Blue Period, as well as other amazing paintings from 1917 and his “Las Meninas” series.</p>
-				</article>
-				<article class="museum__card">
+				</div>
+				<div class="museum__card">
 					<img 
 							class="museum__img"
 							srcset="img/museu-antoni.jpg 2x"
@@ -131,8 +131,8 @@
 							alt="fundacio antoni tapies">
 					<h3 class="museum__name">FUNDACIÓ ANTONI TÀPIES</h3>
 					<p class="museum__summary">The Fundació Antoni Tàpies was established to promote knowledge of modern art and houses one of the most complete public collections of Antoni Tàpies’ work.</p>
-				</article>
-				<article class="museum__card">
+				</div>
+				<div class="museum__card">
 					<img 
 							class="museum__img"
 							srcset="img/museu-nacional.jpg 2x"
@@ -140,8 +140,8 @@
 							alt="Museu Nacional">
 					<h3 class="museum__name">Museu Nacional</h3>
 					<p class="museum__summary">This museum displays the world’s best collection of Romanesque frescoes. Containing works by great European painters such as Rubens, Velázquez and El Greco, it is also a leading centre of Modernista art.</p>
-				</article>
-				<article class="museum__card">
+				</div>
+				<div class="museum__card">
 					<img 
 							class="museum__img"
 							srcset="img/museu-macba.jpg 2x"
@@ -149,6 +149,7 @@
 							alt="MACBA">
 					<h3 class="museum__name">MACBA</h3>
 					<p class="museum__summary">This iconic building designed by Richard Meier features fascinating exhibitions for art lovers and a permanent collection containing works by Basquiat, Calder and Juan Muñoz, among others.</p>
-				</article>
+				</div>
+			</div>
 </body>
 </html>
