added pass; yet to make sticky

--- a/index.html
+++ b/index.html
@@ -151,5 +151,30 @@
 					<p class="museum__summary">This iconic building designed by Richard Meier features fascinating exhibitions for art lovers and a permanent collection containing works by Basquiat, Calder and Juan Muñoz, among others.</p>
 				</div>
 			</div>
+		</section>
+
+		<section class="pass">
+			<div class="pass__card">
+				<h2 class="pass__heading">Meet <br>the Pass</h2>
+				<p class="pass__text">Discover the finest collection of Romanesque mural paintings in the world, enjoy Modernisme, and be surprised by the most contemporary art and creation. The universes of Miró, Picasso and Tàpies await you as you embark upon this unique experience – without queuing or waiting.</p>
+				<a class="purchasebutton purchasebutton--pass" href="#!">Buy your articket</a>
+				<div class="question-arrow">
+					<a class="questions" href="#!">
+					Questions? Check our FAQ</a>
+					<img src="img/arrow-right.svg" alt="">
+				</div>
+			</div>
+			<div class="pass__card">
+				<img class="pass__img" src="img/passport-cover.jpg" alt="passport detail photo">
+			</div>
+			<div class="pass__card">
+				<img class="pass__img" src="img/museum-locations.jpg" alt="passport detail photo">
+			</div>
+			<div class="pass__card">
+				<img class="pass__img" src="img/musem-pass.jpg" alt="passport detail photo">
+			</div>
+			<div class="pass__card">
+				<img class="pass__img" src="img/passport-stamp.jpg" alt="passport detail photo">
+			</div>
 </body>
 </html>
