added how to cards

--- a/index.html
+++ b/index.html
@@ -176,5 +176,45 @@
 			<div class="pass__card">
 				<img class="pass__img" src="img/passport-stamp.jpg" alt="passport detail photo">
 			</div>
+		</section>
+
+		<section class="how">
+			<h2 class="section__header">How it works</h2>
+			<div class="how__grid">
+				<div class="how__step">
+					<p class="how__step">01</p>
+					<div class="icon-arrow">
+						<img class="icon--purchase"
+							src="img/how-it-works-1.svg"
+							alt="">
+						<img src="components/img/arrow-right.svg" alt="">
+					</div>
+					<h4 class="how__stepheader">Purchase your Articket in just a few clicks</h4>
+					<p class="how__stepsummary">You will receive a voucher in your email to print or save on your phone</p>
+				</div>
+				<div class="how__step">
+					<p class="how__step">02</p>
+					<div class="icon-arrow">
+						<img class="icon--purchase"
+							src="img/how-it-works-2.svg"
+							alt="">
+						<img src="components/img/arrow-right.svg" alt="">
+					</div>
+					<h4 class="how__stepheader">Pick up your passport in any of the 6 museums</h4>
+					<p class="how__stepsummary">Use the preferent access of any museum and exchange your voucher for the Articket passport.</p>
+				</div>
+				<div class="how__step">
+					<p class="how__step">03</p>
+					<div class="icon-arrow">
+						<img class="icon--purchase"
+							src="img/how-it-works-3.svg"
+							alt="">
+						<img src="components/img/arrow-right.svg" alt="">
+					</div>
+					<h4 class="how__stepheader">Get your first stamp and start your journey!</h4>
+					<p class="how__stepsummary">Avoid waiting times and queues. Start enjoying the best art in Barcelona!</p>
+				</div>
+			</div>
+		</section>
 </body>
 </html>
