formatted how it works section

--- a/index.html
+++ b/index.html
@@ -215,6 +215,24 @@
 					<p class="how__stepsummary">Avoid waiting times and queues. Start enjoying the best art in Barcelona!</p>
 				</div>
 			</div>
+			<div class="how__buy"><a class="purchasebutton purchasebutton--pass" href="#!">Buy your articket</a></div>
 		</section>
+
+		<section class="promotion">
+			<div class="promotioncard">
+				<div class="promotion--left">
+					<div class="promotion--header"><h2 class="promotion--header1">+100.000 artickets sold</h2><h2 class="promotion--header2">get yours!</h2></div>
+					<p class="promotion--subheader">save up to 45% with articket</p>
+				</div>
+				<div class="promotion--right">
+					<img 
+						src="../img/seal.png" 
+						srcset="../img/seal.png 2x"
+						alt="">
+					<a class="purchasebutton purchasebutton--promotion" href="#!">buy your articket</a>
+				</div>
+			</div>
+					
+
 </body>
 </html>
