re-formatted promotion card, added faq content

--- a/index.html
+++ b/index.html
@@ -219,20 +219,56 @@
 		</section>
 
 		<section class="promotion">
-			<div class="promotioncard">
-				<div class="promotion--left">
+			<div class="promotioncard2">
+				<div class="promotion--top">
 					<div class="promotion--header"><h2 class="promotion--header1">+100.000 artickets sold</h2><h2 class="promotion--header2">get yours!</h2></div>
-					<p class="promotion--subheader">save up to 45% with articket</p>
-				</div>
-				<div class="promotion--right">
 					<img 
-						src="../img/seal.png" 
-						srcset="../img/seal.png 2x"
+						src="img/seal.png" 
+						srcset="img/seal.png 2x"
 						alt="">
+				</div>
+				<div class="promotion--bottom">
+					<p class="promotion--subheader">save up to 45% with articket</p>
 					<a class="purchasebutton purchasebutton--promotion" href="#!">buy your articket</a>
 				</div>
 			</div>
-					
+		</section>
 
+		<section class="faq">
+			<div class="faq__top">
+				<h2 class="faq__header">FREQUENTLY ASKED QUESTIONS</h2>
+				<div class="question-arrow">
+					<a class="questions" href="#!">
+					Questions? Check our FAQ</a>
+					<img src="components/img/arrow-right.svg" alt="">
+				</div>
+			</div>
+			<div class="faq__grid">
+				<article class="faq__article">
+					<h3 class="faq__q">Are there any discounts for young people, students, or pensioners?</h3>
+					<p class="faq__a">ArticketBCN does not have any discounts. It is a single price product that includes visits to six museums. If you visit them all, it works out cheaper than the total of every museum’s discounted prices for those groups.</p>
+				</article>
+				<article class="faq__article">
+					<h3 class="faq__q">DO CHILDREN HAVE TO PAY?</h3>
+					<p class="faq__a">Children aged 16 and under do not have to pay if they are accompanied by an adult with an ArticketBCN Art Passport. Children aged 16 and under will be given a Boarding Pass so that they too can get it stamped at the museums they visit, just like the adults do with their ArticketBCN Art Passport.</p>
+				</article>
+				<article class="faq__article">
+					<h3 class="faq__q">DO YOU NEED TO QUEUE TO GET INTO THE MUSEUMS?</h3>
+					<p class="faq__a">You do not need to queue. With the ArticketBCN Art Passport, you will get fast-track entrance at any of the six museums. All you need to do is go to the fast-track desk of each museum, where they will stamp your ArticketBCN Art Passport to allow you to go in.</p>
+				</article>
+				<article class="faq__article">
+					<h3 class="faq__q">CAN I GIVE IT TO SOMEONE AS A GIFT?</h3>
+					<p class="faq__a">Yes. It is not a product for a specific individual. If you buy it online, during the purchase process you can select the gift option that will allow you to write a personalized text and send it to whoever you want via e-mail without stating the price of the passport. If, on the other hand, you prefer to buy it at the box office of any of the 6 museums, at the time of purchase they will put the stamp of the museum where it is sold, but they will not mark the visit stamp. Please note that in both options the year of validity begins to count from the time of purchase.</p>
+				</article>
+				<article class="faq__article">
+					<h3 class="faq__q">DOES IT BEAR THE HOLDER’S NAME?</h3>
+					<p class="faq__a">No. The ArticketBCN Art Passport does not bear the holder’s name. The visits made and the expiry date are all that matter.</p>
+				</article>
+				<article class="faq__article">
+					<h3 class="faq__q">WHERE CAN I EXCHANGE THE VOUCHER TO GET MY ARTICKET ART PASSPORT?</h3>
+					<p class="faq__a">At any of the six ArticketBCN museums. Go to the fast-track ticket desk and they will give you an ArticketBCN Art Passport.</p>
+				</article>
+			</div>
+		</section>
 </body>
 </html>
