--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>ArticketBCN: Barcelona Museum Pass | Unofficial Website</title>
 	<link rel="stylesheet" href="https://use.typekit.net/kge1ahz.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 		<div class="header">
@@ -268,6 +269,64 @@
 					<h3 class="faq__q">WHERE CAN I EXCHANGE THE VOUCHER TO GET MY ARTICKET ART PASSPORT?</h3>
 					<p class="faq__a">At any of the six ArticketBCN museums. Go to the fast-track ticket desk and they will give you an ArticketBCN Art Passport.</p>
 				</article>
+			</div>
+		</section>
+
+		<section class="footer1">
+			<div class="footer">
+				<div class="footer-col1">
+					<ul class="footer-menu">
+						<li><img 
+								class="footer-logo"
+								srcset="img/logo-white.svg 1.5x"
+								src="img/logo-white.svg" 
+								alt="logo"></li>
+						<li><a href="#!" class="footer-menu__item">Privacy Policy</a></li>
+						<li><a href="#!" class="footer-menu__item">Legal notice</a></li>
+						<li><a href="#!" class="footer-menu__item">Cookies policy</a></li>
+					</ul>
+				</div>
+				<div class="footer-col2">
+					<ul class="footer-menu">
+						<li><a href="#!" class="footer-menu__item">Museu Nacional</a></li>
+						<li><a href="#!" class="footer-menu__item">Museu Picasso</a></li>
+						<li><a href="#!" class="footer-menu__item">MACBA</a></li>
+						<li><a href="#!" class="footer-menu__item">CCCB</a></li>
+						<li><a href="#!" class="footer-menu__item">Fundació Joan Miró</a></li>
+						<li><a href="#!" class="footer-menu__item">Fundació Antoni Tapies</a></li>
+					</ul>
+				</div>
+				<div class="footer-col3">
+					<ul class="footer-menu">
+						<li><a href="#!" class="footer-menu__item">How it works</a></li>
+						<li><a href="#!" class="footer-menu__item">Barcelona Routes</a></li>
+						<li><a href="#!" class="footer-menu__item">F.A.Q.</a></li>
+					</ul>
+				</div>
+				<div class="footer-col4">
+					<ul class="footer-menu">
+						<li><a href="#!" class="footer-menu__item">Buy safely</a></li>
+						<li><img 
+							class="footer-icon"
+							srcset="img/secure-1.svg 2x"
+							src="img/secure-1.svg" 
+							alt="secure payments"
+							></li>
+					</ul>
+				</div>
+				<div class="footer-col5">
+					<ul class="footer-menu">
+						<li>
+							<div class="footer-socials">
+								<a href="#!" class="fa fa-facebook"></a>
+								<a href="#!" class="fa fa-instagram"></a>
+								<a href="#!" class="fa fa-twitter"></a>
+							</div>
+						</li>
+						<li><p class="footer-menu__item">Design and web development:</p>
+						<a href="#!" class="footer-menu__item copyright">Copymouse Studio</a></li>
+					</ul>
+				</div>
 			</div>
 		</section>
 </body>
