added normalize.css; media format for header

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 	<title>ArticketBCN: Barcelona Museum Pass | Unofficial Website</title>
 	<link rel="stylesheet" href="https://use.typekit.net/kge1ahz.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link href="css/normalize.css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-		<div class="header">
+		<header class="header">
 			<img 
 				class="logo"
 				src="img/logo.svg" 
@@ -41,7 +42,7 @@
 					<a class="purchasebutton purchasebutton--nav" href="#!">Buy your articket</a>
 				</div>
 			</div>
-		</div>
+		</header>
 
 		<section class="featured">
 			<div class="featured--right">
@@ -84,8 +85,6 @@
 						<p class="t2">35€</p>
 					</div>
 				</div>
-
-
 			</div>
 			<img 
 				class="featured--passport"
@@ -272,7 +271,7 @@
 			</div>
 		</section>
 
-		<section class="footer1">
+		<footer class="footer1">
 			<div class="footer">
 				<div class="footer-col1">
 					<ul class="footer-menu">
@@ -328,6 +327,6 @@
 					</ul>
 				</div>
 			</div>
-		</section>
+		</footer>
 </body>
 </html>
