price format adjustment

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 				<div class="featured-3">
 					<a class="purchasebutton" href="#!">Buy your articket</a>
 					<div class="featured-3a">
-						<p class="t">Real</p>
-						<p class="t2">65€</p>
+						<p class="t t--1">Real</p>
+						<p class="price price--real">63€</p>
 					</div>
 					<img src="components/img/arrow-right.svg" alt="">
 					<div class="featured-3b">
-						<p class="t">articket</p>
-						<p class="t2">35€</p>
+						<p class="t t--1">articket</p>
+						<p class="price">35€</p>
 					</div>
 				</div>
 			</div>
