museum format polish

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 							src="img/museu-antoni.jpg"
 							alt="fundacio antoni tapies">
 					<h3 class="museum__name">FUNDACIÓ ANTONI TÀPIES</h3>
-					<p class="museum__summary">The Fundació Antoni Tàpies was established to promote knowledge of modern art and houses one of the most complete public collections of Antoni Tàpies’ work.</p>
+					<p class="museum__summary">The Funcacio Antoni Tapies was established to promote knowledge of modern art and houses one of the most complete public collections of Antoni Tapies' work.</p>
 				</div>
 				<div class="museum__card">
 					<img 
@@ -148,7 +148,7 @@
 							src="img/museu-macba.jpg"
 							alt="MACBA">
 					<h3 class="museum__name">MACBA</h3>
-					<p class="museum__summary">This iconic building designed by Richard Meier features fascinating exhibitions for art lovers and a permanent collection containing works by Basquiat, Calder and Juan Muñoz, among others.</p>
+					<p class="museum__summary">This iconic building designed by Richard Meier features fascinating exhibitions for art lovers and a permanent collection containing works by Basquiat, Calder and Juan Munoz, amon others.</p>
 				</div>
 			</div>
 		</section>
