--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
 				</ul>
 
 				<div class="nav__dropdown">
-					<a class="lang--active" href="#!">en</a>
-					<img 
+					<a class="lang--active" href="#!">en<img 
 						class="dropbtn" 
 						src="components/img/dropbtn@2x.png"
 						srcset="components/img/dropbtn@2x.png 2x"
-						alt="">
+						alt=""></a>
 					<div class="nav-bar__language">
 						<a class="lang" href="#!">ca</a>
 						<a class="lang" href="#!">es</a>
@@ -50,26 +49,22 @@
 				<ul class="featured_icons">
 					<li class="icon__card">
 						<div class="i"><img src="img/icon-clock.svg" alt=""></div>
-						<div class="t"><p class="t">Skip</p>
-						<p class="t">the line</p>
+						<div class="t"><p class="t">Skip<br>the line</p>
 						</div>
 					</li>
 					<li class="icon__card">
 						<div class="i"><img src="img/icon-ticket.svg" alt=""></div>
-						<div class="t"><p class="t">1 ticket</p>
-						<p class="t">6 museums</p>
+						<div class="t"><p class="t">1 ticket<br>6 museums</p>
 						</div>
 					</li>
 					<li class="icon__card">
 						<div class="i"><img src="img/icon-percent.svg" alt=""></div>
-						<div class="t"><p class="t">save up</p>
-						<p class="t">to 45%</p>
+						<div class="t"><p class="t">save up<br>to 45%</p>
 						</div>
 					</li>
 					<li class="icon__card">
 						<div class="i"><img src="img/icon-heart.svg" alt=""></div>
-						<div class="t"><p class="t">keep a</p>
-						<p class="t">memory</p>
+						<div class="t"><p class="t">keep a<br>memory</p>
 						</div>
 					</li>
 				</ul>
@@ -92,6 +87,10 @@
 				src="img/articket-passport.png" 
 				alt="hand holding articket passport">
 		</section>
+
+		<div class="slogan s1">&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt; SIX MUSEUMS | ONE PASS &gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</div>
+
+		<div class="slogan s2">&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt; SIX MUSEUMS | ONE PASS &gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</div>
 
 		<section class="museums">
 			<h2 class="section__header">Museums Included</h2>
