--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
 				alt="hand holding articket passport">
 		</section>
 
-		<div class="slogan s1">&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt; SIX MUSEUMS | ONE PASS &gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</div>
+		<section class="slogans">
+			<div class="slogan s1">&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt; SIX MUSEUMS | ONE PASS &gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</div>
 
-		<div class="slogan s2">&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt; SIX MUSEUMS | ONE PASS &gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</div>
+			<div class="slogan s2">&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt; SIX MUSEUMS | ONE PASS &gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</div>
+		</section>
 
 		<section class="museums">
 			<h2 class="section__header">Museums Included</h2>
